--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       <h2>About Me</h2>  
       <p>
             Hello! Welcome to my page, I'm Jeremy. I'm an 18 year old from 
-            <a href="http://www.magicalkenya.com/places-to-visit/cities/nairobi/"> Nairobi, Kenya</a> who's just began taking a class on programming. I decided to do this because I wanted to take a gap year and have a break from "formal learning" before I made my way to university. 
+            <a href="http://www.magicalkenya.com/places-to-visit/cities/nairobi/" target="_blank"> Nairobi, Kenya</a> who's just began taking a class on programming. I decided to do this because I wanted to take a gap year and have a break from "formal learning" before I made my way to university. 
         </p>   
         <p>
             An interest in Computer Science and technology as a whole has always been a part of who I am and that's another reason I was keen to take a class on programming. My background is the British education system and I attended an International school graduating -having finished my A-Levels- in May 2018; where I did Chemistry, Biology, and Math. Before I began this course, I'd completed work experience at three companies- two of them being tech companies. The first was 
-            <a href="https://www.cellulant.com/" > Cellulant</a> in 2015 and then 
-            <a href="http://www.fintech-group.com/" > Fintech</a> in 2017; both of these experiences at these firms only strengthened my interest in the industry and my drive to go on to do Computer Science.
+            <a href="https://www.cellulant.com/" target="_blank"> Cellulant</a> in 2015 and then 
+            <a href="http://www.fintech-group.com/" target="_blank"> Fintech</a> in 2017; both of these experiences at these firms only strengthened my interest in the industry and my drive to go on to do Computer Science.
         </p>
         <p>    
             Other interests of mine are sports-related. I’m a big football fan and avid 
-            <a href="http://nba.kwesesports.com/?gr=www"> NBA</a> supporter, my teams are 
-            <a href="https://www.manutd.com/"> Manchester United</a> and the 
-            <a href="https://www.nba.com/pelicans/"> New Orleans Pelicans</a>. I sometimes play golf and tennis and was once a competitive swimmer.
+            <a href="http://nba.kwesesports.com/?gr=www" target="_blank"> NBA</a> supporter, my teams are 
+            <a href="https://www.manutd.com/" target="_blank"> Manchester United</a> and the 
+            <a href="https://www.nba.com/pelicans/" target="_blank"> New Orleans Pelicans</a>. I sometimes play golf and tennis and was once a competitive swimmer.
         </p>
   </body>
 </html>
