--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Portfolio Landing Page</title>
   </head>
   <body>
-    <h1>Jeremy's Portfolio Landing Page</h1>
+    <h1>Portfolio Landing Page</h1>
     <div class="about-me">
       <h2>About Me</h2>  
       <p>
