I have added the links to my repositories

--- a/index.html
+++ b/index.html
@@ -9,19 +9,34 @@
     <div class="about-me">
       <h2>About Me</h2>  
       <p>
-            Hello! Welcome to my page, I'm Jeremy. I'm an 18 year old from 
-            <a href="http://www.magicalkenya.com/places-to-visit/cities/nairobi/" target="_blank"> Nairobi, Kenya</a> who's just began taking a class on programming. I decided to do this because I wanted to take a gap year and have a break from "formal learning" before I made my way to university. 
-        </p>   
-        <p>
-            An interest in Computer Science and technology as a whole has always been a part of who I am and that's another reason I was keen to take a class on programming. My background is the British education system and I attended an International school graduating -having finished my A-Levels- in May 2018; where I did Chemistry, Biology, and Math. Before I began this course, I'd completed work experience at three companies- two of them being tech companies. The first was 
-            <a href="https://www.cellulant.com/" target="_blank"> Cellulant</a> in 2015 and then 
-            <a href="http://www.fintech-group.com/" target="_blank"> Fintech</a> in 2017; both of these experiences at these firms only strengthened my interest in the industry and my drive to go on to do Computer Science.
-        </p>
-        <p>    
-            Other interests of mine are sports-related. I’m a big football fan and avid 
-            <a href="http://nba.kwesesports.com/?gr=www" target="_blank"> NBA</a> supporter, my teams are 
-            <a href="https://www.manutd.com/" target="_blank"> Manchester United</a> and the 
-            <a href="https://www.nba.com/pelicans/" target="_blank"> New Orleans Pelicans</a>. I sometimes play golf and tennis and was once a competitive swimmer.
-        </p>
+          Hello! Welcome to my page, I'm Jeremy. I'm an 18 year old from 
+          <a href="http://www.magicalkenya.com/places-to-visit/cities/nairobi/" target="_blank"> Nairobi, Kenya</a> who's just began taking a class on programming. I decided to do this because I wanted to take a gap year and have a break from "formal learning" before I made my way to university. 
+       </p>   
+      <p>
+        An interest in Computer Science and technology as a whole has always been a part of who I am and that's another reason I was keen to take a class on programming. My background is the British education system and I attended an International school graduating -having finished my A-Levels- in May 2018; where I did Chemistry, Biology, and Math. Before I began this course, I'd completed work experience at three companies- two of them being tech companies. The first was 
+        <a href="https://www.cellulant.com/" target="_blank"> Cellulant</a> in 2015 and then 
+        <a href="http://www.fintech-group.com/" target="_blank"> Fintech</a> in 2017; both of these experiences at these firms only strengthened my interest in the industry and my drive to go on to do Computer Science.
+      </p>
+      <p>    
+        Other interests of mine are sports-related. I’m a big football fan and avid 
+        <a href="http://nba.kwesesports.com/?gr=www" target="_blank"> NBA</a> supporter, my teams are 
+        <a href="https://www.manutd.com/" target="_blank"> Manchester United</a> and the 
+        <a href="https://www.nba.com/pelicans/" target="_blank"> New Orleans Pelicans</a>. I sometimes play golf and tennis and was once a competitive swimmer.
+      </p>
+    </div>
+    <div class="repos">
+      <h4>
+        Here are some links to some of my works that I've done. They're of a very varied type in terms of their level of detail and substance. So I've picked out a few good ones for you to look through. If you'd still like to see them all afterwards there's a link to my whole bank of repositories. At the end.
+          <br>
+            <ul>
+              <li><a href="https://github.com/JeremyKimotho/my-first-webpage" target="_blank">My First Website</a></li>
+                This one was actually my first ever webpage. It’s simple but was a chance for me to explore the looks of different fonts and colours and different positions of the text. It’s linked to another webpage of mine called my-favourite-things. It uses HTML and css but I also used some inline tags before I was very adept at using css.
+              <li><a href="https://github.com/JeremyKimotho/resort-proj" target="_blank">Resort Project</a></li>
+                This was a project I did where I was making a website for my own fictional website. It is very busy and has a lot of styling. I linked all the pages to each other and to an external website called booking.com. The project I think turned out pretty well and I like the styling though there’s not a lot of consistency with the positioning of images, and full disclosure:it has code I got from stack overflow because it was intended as a practise project and not anything for submission. It was made using HTML and css.
+              <li><a href="https://github.com/JeremyKimotho/travel-agency-website" target="_blank">Happy Trails Travel Agency</a></li>
+                A project on an agency that I made with HTML and css. Has a lot of styling and is actually one of my favourite pages and websites I’ve made. I used a lot of links, a lot of images, legitimate text from a travel blog and it turned out really good looking. It does have some strange colour combinations but it was an intentional move to make the colours more exotic.
+            </ul>
+      </h4>
+    </div>
   </body>
 </html>
