have now added my final link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <li><a href="https://github.com/JeremyKimotho/travel-agency-website" target="_blank">Happy Trails Travel Agency</a></li>
                 A project on an agency that I made with HTML and css. Has a lot of styling and is actually one of my favourite pages and websites I’ve made. I used a lot of links, a lot of images, legitimate text from a travel blog and it turned out really good looking. It does have some strange colour combinations but it was an intentional move to make the colours more exotic.
             </ul>
+        <p>
+          Click <a href="https://github.com/JeremyKimotho?tab=repositories" target="_blank"> here</a> to see all my repositories.
+        </p>
       </h4>
     </div>
   </body>
