--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Portfolio Landing Page</h1>
+    <img src="images/united.jpg" alt="A picture of myself at Old Trafford">
     <div class="about-me">
       <h2>About Me</h2>  
       <p>
